crates/cribo/tests/snapshots/bundled_code@match_pattern_rewrites.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/match_pattern_rewrites/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        return globals()[self._entry[1]]

    def exec_module(self, module):
        init = self._entry[0]
        if init is not None:
            globals()[init](module)
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}

    def register(self, name, init, namespace, is_package):
        self._targets[name] = init, namespace, is_package

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, _CriboPreservedLoader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('wrapped_matcher', '_cribo_init___cribo_52189b_wrapped_matcher', 'wrapped_matcher', False)
inline_first = _cribo.types.SimpleNamespace(__name__='inline_first')
class Status_2:
    READY = "first-ready"
    PENDING = "first-pending"
    MAPPING_KEY = "kind"
Status_2.__module__ = 'inline_first'
Status_2.__name__ = 'Status'
Status_2.__qualname__ = 'Status'
class Event_2:
    __match_args__ = "kind",

    def __init__(self, kind):
        self.kind = kind
Event_2.__module__ = 'inline_first'
Event_2.__name__ = 'Event'
Event_2.__qualname__ = 'Event'
LAST_RESULT_2 = "first-unset"
def match_class_2(value):
    match value:
        case Event_2(Status_2.READY):
            return "first-class"
        case _:
            return "first-class-miss"
def match_mapping_2(value):
    match value:
        case {Status_2.MAPPING_KEY: Status_2.READY}:
            return "first-mapping"
        case _:
            return "first-mapping-miss"
def match_sequence_2(value):
    match value:
        case [Status_2.READY | Status_2.PENDING as state]:
            return f"first-sequence:{state}"
        case _:
            return "first-sequence-miss"
def record_result_2(value):
    match value:
        case Status_2.READY:
            global LAST_RESULT_2
            LAST_RESULT_2 = "first-recorded"
def get_last_result_2():
    return LAST_RESULT_2
inline_first.Event = Event_2
inline_first.LAST_RESULT = LAST_RESULT_2
inline_first.Status = Status_2
inline_first.get_last_result = get_last_result_2
inline_first.match_class = match_class_2
inline_first.match_mapping = match_mapping_2
inline_first.match_sequence = match_sequence_2
inline_first.record_result = record_result_2
inline_second = _cribo.types.SimpleNamespace(__name__='inline_second')
class Status_1:
    READY = "second-ready"
    PENDING = "second-pending"
    MAPPING_KEY = "kind"
Status_1.__module__ = 'inline_second'
Status_1.__name__ = 'Status'
Status_1.__qualname__ = 'Status'
class Event_1:
    __match_args__ = "kind",

    def __init__(self, kind):
        self.kind = kind
Event_1.__module__ = 'inline_second'
Event_1.__name__ = 'Event'
Event_1.__qualname__ = 'Event'
LAST_RESULT_1 = "second-unset"
def match_class_1(value):
    match value:
        case Event_1(Status_1.READY):
            return "second-class"
        case _:
            return "second-class-miss"
def match_mapping_1(value):
    match value:
        case {Status_1.MAPPING_KEY: Status_1.READY}:
            return "second-mapping"
        case _:
            return "second-mapping-miss"
def match_sequence_1(value):
    match value:
        case [Status_1.READY | Status_1.PENDING as state]:
            return f"second-sequence:{state}"
        case _:
            return "second-sequence-miss"
def record_result_1(value):
    match value:
        case Status_1.READY:
            global LAST_RESULT_1
            LAST_RESULT_1 = "second-recorded"
def get_last_result_1():
    return LAST_RESULT_1
inline_second.Event = Event_1
inline_second.LAST_RESULT = LAST_RESULT_1
inline_second.Status = Status_1
inline_second.get_last_result = get_last_result_1
inline_second.match_class = match_class_1
inline_second.match_mapping = match_mapping_1
inline_second.match_sequence = match_sequence_1
inline_second.record_result = record_result_1
wrapped_matcher = _cribo.types.SimpleNamespace(__name__='wrapped_matcher', __initializing__=False, __initialized__=False)
_cribo_wrapped_matcher_EVENT_PATTERN = None
_cribo_wrapped_matcher_STATUS_PATTERN = None
_cribo_wrapped_matcher_global_capture = None
def _cribo_init___cribo_52189b_wrapped_matcher(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    global _cribo_wrapped_matcher_EVENT_PATTERN, _cribo_wrapped_matcher_STATUS_PATTERN, _cribo_wrapped_matcher_global_capture
    json = _cribo.json
    self.json = json
    self.json = json
    assert _cribo.json.__name__ == "json"

    class WrappedStatus:
        READY = "wrapped-ready"
    WrappedStatus.__module__ = 'wrapped_matcher'
    WrappedStatus.__qualname__ = 'WrappedStatus'
    self.WrappedStatus = WrappedStatus

    class WrappedEvent:
        __match_args__ = "kind",

        def __init__(self, kind):
            self.kind = kind
    WrappedEvent.__module__ = 'wrapped_matcher'
    WrappedEvent.__qualname__ = 'WrappedEvent'
    self.WrappedEvent = WrappedEvent
    EVENT_PATTERN = self.WrappedEvent
    _cribo_wrapped_matcher_EVENT_PATTERN = EVENT_PATTERN
    self.EVENT_PATTERN = _cribo_wrapped_matcher_EVENT_PATTERN
    STATUS_PATTERN = self.WrappedStatus
    _cribo_wrapped_matcher_STATUS_PATTERN = STATUS_PATTERN
    self.STATUS_PATTERN = _cribo_wrapped_matcher_STATUS_PATTERN
    MATCHED_EVENT = self.WrappedEvent("wrapped-ready")
    self.MATCHED_EVENT = MATCHED_EVENT
    match self.MATCHED_EVENT:
        case self.EVENT_PATTERN(self.STATUS_PATTERN.READY):
            MODULE_MATCH = "wrapped-module"
            wrapped_matcher.MODULE_MATCH = MODULE_MATCH
        case _:
            MODULE_MATCH = "wrapped-module-miss"
            wrapped_matcher.MODULE_MATCH = MODULE_MATCH

    def match_wrapped(value):
        match value:
            case self.EVENT_PATTERN(self.STATUS_PATTERN.READY):
                return "wrapped-class"
            case _:
                return "wrapped-class-miss"
    self.match_wrapped = match_wrapped

    def match_wrapped_global(value):
        global _cribo_wrapped_matcher_EVENT_PATTERN, _cribo_wrapped_matcher_STATUS_PATTERN
        match value:
            case _cribo_wrapped_matcher_EVENT_PATTERN(_cribo_wrapped_matcher_STATUS_PATTERN.READY):
                return "wrapped-global"
            case _:
                return "wrapped-global-miss"
    self.match_wrapped_global = match_wrapped_global
    value = "module-value"
    self.value = value
    if self.value:

        def match_capture(subject):
            match subject:
                case [value] if (value == "captured-value"):
                    return value
            return "capture-miss"
        wrapped_matcher.match_capture = match_capture

    def match_import_capture(subject):
        match subject:
            case [json]:
                return json
        return "import-capture-miss"
    self.match_import_capture = match_import_capture

    def match_import_capture_scope(subject):
        try:
            match subject:
                case json.JSONEncoder():
                    return "import-module-match"
                case [json]:
                    return json
        except UnboundLocalError:
            return "capture-scope-local"
        return "import-scope-miss"
    self.match_import_capture_scope = match_import_capture_scope
    global_capture = "global-before"
    _cribo_wrapped_matcher_global_capture = global_capture
    self.global_capture = _cribo_wrapped_matcher_global_capture

    def match_global_capture(subject):
        if subject is None:
            global _cribo_wrapped_matcher_global_capture
        match subject:
            case [_cribo_wrapped_matcher_global_capture] if ((_cribo.builtins.setattr(wrapped_matcher, 'global_capture', _cribo_wrapped_matcher_global_capture),), _cribo.builtins.bool(_cribo_wrapped_matcher_global_capture == "captured-global"))[1]:
                return _cribo_wrapped_matcher_global_capture
        return "global-capture-miss"
    self.match_global_capture = match_global_capture

    def get_global_capture():
        return self.global_capture
    self.get_global_capture = get_global_capture
    LOADED_MODULES = []
    self.LOADED_MODULES = LOADED_MODULES
    self.LOADED_MODULES.append("wrapped_matcher")
    self.__initialized__ = True
    self.__initializing__ = False
    return self
wrapped_matcher.__init__ = _cribo_init___cribo_52189b_wrapped_matcher
FirstEvent = inline_first.Event
get_first_result = inline_first.get_last_result
match_first_class = inline_first.match_class
match_first_mapping = inline_first.match_mapping
match_first_sequence = inline_first.match_sequence
record_first_result = inline_first.record_result
SecondEvent = inline_second.Event
get_second_result = inline_second.get_last_result
match_second_class = inline_second.match_class
match_second_mapping = inline_second.match_mapping
match_second_sequence = inline_second.match_sequence
record_second_result = inline_second.record_result
wrapped_matcher = _cribo_init___cribo_52189b_wrapped_matcher(wrapped_matcher)
MODULE_MATCH = wrapped_matcher.MODULE_MATCH
WrappedEvent = wrapped_matcher.WrappedEvent
get_global_capture = wrapped_matcher.get_global_capture
match_capture = wrapped_matcher.match_capture
match_global_capture = wrapped_matcher.match_global_capture
match_import_capture = wrapped_matcher.match_import_capture
match_import_capture_scope = wrapped_matcher.match_import_capture_scope
match_wrapped = wrapped_matcher.match_wrapped
match_wrapped_global = wrapped_matcher.match_wrapped_global
module_value = wrapped_matcher.value
print(match_first_class(FirstEvent("first-ready")))
print(match_first_mapping({"kind": "first-ready"}))
print(match_first_sequence(["first-pending"]))
record_first_result("first-ready")
print(get_first_result())
print(match_second_class(SecondEvent("second-ready")))
print(match_second_mapping({"kind": "second-ready"}))
print(match_second_sequence(["second-pending"]))
record_second_result("second-ready")
print(get_second_result())
print(match_wrapped(WrappedEvent("wrapped-ready")))
print(match_wrapped_global(WrappedEvent("wrapped-ready")))
print(MODULE_MATCH)
print(match_capture(["captured-value"]))
print(module_value)
print(match_import_capture(["captured-import"]))
print(match_import_capture_scope(["captured-scope"]))
print(match_global_capture(["captured-global"]))
print(get_global_capture())
