crates/cribo/tests/snapshots/bundled_code@metaclass_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('pkg', '_cribo_init___cribo_9c0ae3_pkg', 'pkg', True)
pkg_submodule = _cribo.types.SimpleNamespace(__name__='pkg.submodule')
pkg = _cribo.types.SimpleNamespace(__name__='pkg', __initializing__=False, __initialized__=False, __path__=[])
pkg.submodule = pkg_submodule
def create_object():
    """Factory function that imports from parent."""
    RealObject = _cribo_init___cribo_9c0ae3_pkg(globals()['pkg']).MyObject
    return pkg.MyObject()
pkg_submodule.create_object = create_object
def _cribo_init___cribo_9c0ae3_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pkg'
    create_object = pkg_submodule.create_object
    pkg.create_object = create_object

    class MyMetaclass(type):
        """The metaclass."""

        def __init__(cls, name, bases, kwds):
            super(MyMetaclass, cls).__init__(name, bases, kwds)
            if hasattr(cls, "tag"):
                print(f"Metaclass initialized {name} with tag {cls.tag}")
    MyMetaclass.__module__ = 'pkg'
    MyMetaclass.__qualname__ = 'MyMetaclass'
    self.MyMetaclass = MyMetaclass

    class MyObject(metaclass=MyMetaclass):
        """An object with metaclass."""
        tag = "my_object"

        def __init__(self):
            self.value = "initialized"

        def __repr__(self):
            return f"MyObject(value={self.value})"
    MyObject.__module__ = 'pkg'
    MyObject.__qualname__ = 'MyObject'
    self.MyObject = MyObject
    self.submodule = pkg_submodule
    self.create_object = create_object
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pkg.__init__ = _cribo_init___cribo_9c0ae3_pkg
__cribo_init_result = _cribo_init___cribo_9c0ae3_pkg(pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(pkg, attr, getattr(__cribo_init_result, attr))
MyObject = pkg.MyObject
obj = create_object()
print(f"Object created: {obj}")
print(f"Object tag: {obj.tag}")
submodule = pkg.submodule
