crates/cribo/tests/snapshots/bundled_code@metaclass_forward_ref_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_forward_ref_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('yaml_pkg', '_cribo_init___cribo_f3f287_yaml_pkg', 'yaml_pkg', True)
_cribo_finder.register('yaml_pkg.base', '_cribo_init___cribo_8a246b_yaml_pkg_base', 'yaml_pkg_base', False)
_cribo_finder.register('yaml_pkg.meta', None, None, False, {'YAMLObjectMetaclass': 'YAMLObjectMetaclass'})
yaml_pkg_meta = _cribo.types.SimpleNamespace(__name__='yaml_pkg.meta')
yaml_pkg = _cribo.types.SimpleNamespace(__name__='yaml_pkg', __initializing__=False, __initialized__=False, __path__=[])
yaml_pkg.meta = yaml_pkg_meta
class YAMLObjectMetaclass(type):
    """Metaclass that adds yaml_tag"""

    def __init__(cls, name, bases, kwds):
        super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
        if not hasattr(cls, "yaml_tag") or cls.yaml_tag is None:
            cls.yaml_tag = f"!{name}"
YAMLObjectMetaclass.__module__ = 'yaml_pkg.meta'
yaml_pkg_meta.YAMLObjectMetaclass = YAMLObjectMetaclass
yaml_pkg_base = _cribo.types.SimpleNamespace(__name__='yaml_pkg.base', __initializing__=False, __initialized__=False)
_cribo_finder.bind('yaml_pkg.base', yaml_pkg_base)
yaml_pkg.base = yaml_pkg_base
def _cribo_init___cribo_f3f287_yaml_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'yaml_pkg'
    global yaml_pkg_base
    yaml_pkg_base = _cribo_init___cribo_8a246b_yaml_pkg_base(yaml_pkg_base)
    YAMLObject = yaml_pkg_base.YAMLObject
    self.YAMLObject = YAMLObject
    self.YAMLObject = YAMLObject
    YAMLObjectMetaclass = yaml_pkg_meta.YAMLObjectMetaclass
    yaml_pkg.YAMLObjectMetaclass = YAMLObjectMetaclass
    self.meta = yaml_pkg_meta
    self.__initialized__ = True
    self.__initializing__ = False
    return self
yaml_pkg.__init__ = _cribo_init___cribo_f3f287_yaml_pkg
def _cribo_init___cribo_8a246b_yaml_pkg_base(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'yaml_pkg'
    YAMLObjectMetaclass = yaml_pkg_meta.YAMLObjectMetaclass
    yaml_pkg_base.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """An object with a metaclass"""
        yaml_tag = None

        def __str__(self):
            return f"YAMLObject(tag={self.yaml_tag})"
    YAMLObject.__module__ = 'yaml_pkg.base'
    YAMLObject.__qualname__ = 'YAMLObject'
    self.YAMLObject = YAMLObject
    self.__initialized__ = True
    self.__initializing__ = False
    return self
yaml_pkg_base.__init__ = _cribo_init___cribo_8a246b_yaml_pkg_base
__cribo_init_result = _cribo_init___cribo_f3f287_yaml_pkg(yaml_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(yaml_pkg, attr, getattr(__cribo_init_result, attr))
obj = yaml_pkg.YAMLObject()
print(f"YAMLObject: {obj}")
print(f"Tag: {obj.yaml_tag}")
print(f"Metaclass type: {type(yaml_pkg.YAMLObject)}")
meta = yaml_pkg.meta
base = yaml_pkg.base
